Fix list date align-right

--- a/static/style.css
+++ b/static/style.css
@@ -34,11 +34,16 @@ footer {
 .list li {
     display: flex;
     border-bottom: 1px solid #d8dae1;
-    justify-content: space-between;
     flex-wrap: wrap;
     align-items: baseline;
     padding: 3px 8px;
 }
+
+.list > li > small{
+    flex: 1;
+    text-align: right;
+}
+
 
 .menu a,
 .list a,
